fixed position and spacing issues with icons

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -77,3 +77,7 @@ nav a{
 .grow {
     transform: scale(1.01);
 }
+
+.icon {
+    padding-left: 5px;
+}
